Config via property file is added its just sloppy but its working so i wanna know whether im going in a right direction or not. give me suggestions.

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,3 +1,4 @@
-logger.DefaultLevel=info
-logger.Writer=ConsoleLogWriter
-logger.prefix=yyyy:mm:dd
+logger.defaultLevel=info
+logger.writer=file
+logger.formatter=yyyy:mm:dd
+logger.fileAddress=com.logger.core
